Update README.md and add template for Shenandoah